--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="noctua.html">Noctua</a></li>
+        <a href="/research">Research</a>
         <li><a href="#framework">Framework</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="#contact">Contact</a></li>
