Update phone and fax numbers

--- a/index.html
+++ b/index.html
@@ -532,8 +532,9 @@
       </div>
       <div class="contact-info">
         <p><span class="contact-label">Email:</span> <a href="mailto:info@nyxdynamics.org">info@nyxdynamics.org</a></p>
-        <p><span class="contact-label">Phone:</span> 203.247.1177</p>
-        <p><span class="contact-label">Address:</span><br>268 Post Road East, Suite 200<br>Fairfield, CT 06824</p>
+        <p><span class="contact-label">Phone:</span> 267.534.9203</p>
+        <p><span class="contact-label">Fax:</span> 203.872.1117</p>
+        <p><span class="contact-label">Locations:</span><br>Philadelphia, PA<br>Fairfield, CT</p>
         <div class="contact-links">
           <a href="https://github.com/Nyx-Dynamics" target="_blank" class="contact-link">GitHub</a>
           <a href="https://www.linkedin.com/company/nyx-dynamics-llc/" target="_blank" class="contact-link">LinkedIn</a>
