--- a/research/prevention-theorem/index.html
+++ b/research/prevention-theorem/index.html
@@ -833,7 +833,7 @@ body::before {
     <p>An infographic mapping the biological windows for mucosal vs. parenteral exposure — and the structural access crisis that closes PEP as a strategy for people who inject drugs.</p>
   </div>
   <div class="reveal" style="margin: 2rem 0; border-radius: 12px; overflow: hidden; border: 1px solid rgba(255,255,255,0.06); box-shadow: 0 4px 30px rgba(0,0,0,0.3);">
-    <img src="../images/infographic_prevention_theorem.jpg" alt="The HIV Prevention Clock: Why Route Matters for PEP Efficacy — Infographic" style="width: 100%; display: block;">
+    <img src="/research/images/infographic_prevention_theorem.jpg" alt="The HIV Prevention Clock: Why Route Matters for PEP Efficacy — Infographic" loading="lazy" decoding="async" style="width: 100%; display: block; height: auto;">
   </div>
 </section>
 
