--- a/research/algorithmic-discrimination/index.html
+++ b/research/algorithmic-discrimination/index.html
@@ -365,7 +365,7 @@ nav {
     <p>An infographic overview of the 11-barrier gauntlet, interaction dominance, and the hockey stick curve that explains why incremental reform always fails.</p>
   </div>
   <div class="reveal" style="margin: 2rem 0; border-radius: 12px; overflow: hidden; border: 1px solid var(--border); box-shadow: 0 4px 30px rgba(0,0,0,0.3);">
-    <img src="../images/infographic_algorithmic_discrimination.jpg" alt="Breaking the Synergy: Why Incremental Algorithmic Reforms Fail" style="width: 100%; display: block;">
+    <img src="/research/images/infographic_algorithmic_discrimination.jpg" alt="Breaking the Synergy: Why Incremental Algorithmic Reforms Fail" loading="lazy" decoding="async" style="width: 100%; display: block; height: auto;">
   </div>
 </section>
 
